istio/otel-demo-gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: feature-gateway
  namespace: otel-demo
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "featureflag.IP_TO_REPLACE.nip.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  namespace: otel-demo
spec:
  hosts:
    - "*"
  gateways:
    - feature-gateway
  http:
    - route:
        - destination:
            host: featureflagservice
            port:
              number: 8081
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: locust-gateway
  namespace: otel-demo
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "locust.IP_TO_REPLACE.nip.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  namespace: otel-demo
spec:
  hosts:
    - "*"
  gateways:
    - locust-gateway
  http:
    - route:
        - destination:
            host: loadgeneratorservice
            port:
              number: 8089
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: http-gateway
  namespace: otel-demo
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "otel.IP_TO_REPLACE.nip.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  namespace: otel-demo
spec:
  hosts:
    - "*"
  gateways:
    - http-gateway
  http:
    - route:
        - destination:
            host: frontend
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: hubble-gateway
  namespace: kube-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: hubble
        protocol: HTTP
      hosts:
        - "hubble.IP_TO_REPLACE.nip.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  hosts:
    - "*"
  gateways:
    - hubble-gateway
  http:
    - route:
        - destination:
            host: hubble-ui
            port:
              number: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: grafana-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: grafana
        protocol: HTTP
      hosts:
        - "grafana.IP_TO_REPLACE.nip.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-ui
  namespace: default
spec:
  hosts:
    - "*"
  gateways:
    - grafana-gateway
  http:
    - route:
        - destination:
            host: prom-grafana
            port:
              number: 80
---
